package behavioral.state.remote;

public interface IRemoteState {
  public void handle(RemoteControl remote);
}
